--- a/mainstyles.css
+++ b/mainstyles.css
@@ -193,7 +193,7 @@
     align-items: center;
     align-self: stretch;
     justify-content: space-between;
-    margin-right: 15%;
+    margin-right: 13.7%;
     margin-left: 11%;
     margin-top: -40px;
   }
